# cpp_demos

./: CMakeLists.txt  build.sh  main.cpp
cmake/: config.cmake
configs/: TopicModule.yml
include/: TopicModule.h  build_config.h  build_config.h.in
note/: 1_类型推导.md
python/kalman_filter/: Kalman-Filter-CTRA_test.py  generate_traj.py
scripts/: test_codeium.cpp
scripts/bag/: bag_to_img.py
src/1_auto_decltype/: auto.cpp  decltype.cpp
src/2023_interview/: CMakeLists.txt  Iou.cpp  findk.cpp  palind.cpp  rotate_mat.cpp  subarraysumK.cpp
src/2_traits/: intro.cpp
src/3_rongqi/: CMakeLists.txt  Rtti.cpp  deque_demo.cpp
src/4_thread/: atomic_test.cpp  c_v_test.cpp  test_feature.cpp
src/5_design/: singleton.hpp
src/byte_test/: ByteTest.cpp  CMakeLists.txt
src/cvtest/: CMakeLists.txt  test_kalman.cpp  test_kalman_2.cpp  testcv.cpp
src/ipc/: CMakeLists.txt  lock_read.cpp  lock_write.cpp  mmap_read.cpp  mmap_write.cpp  shm_lock_common.cpp  shm_lock_read.cpp  shm_lock_read2.cpp  shm_lock_write.cpp  shm_read.cpp  shm_write.cpp
src/kalman/: 2  CMakeLists.txt  Kalman2.cpp  KalmanAngle.cpp  Kalman_CTRA.cpp  Kalman_rollback.cpp  kalman.py  kalman2.py  kalman_mouse.cpp  main.cpp
src/namespace_link/: CMakeLists.txt
src/namespace_link/sub1/: CMakeLists.txt  SDKPiNet.cpp  SDKPiNet.h  SDKPiNetImpl.cpp  SDKPiNetImpl.h
src/namespace_link/sub2/: CMakeLists.txt  main.cpp
src/observer/: CMakeLists.txt  main.cpp  observer_1.cpp  observer_1.h  observer_2.hpp
src/operator/: CMakeLists.txt  VisionConfig.cpp  VisionConfig.h  main.cpp
src/operator/config/: DNNModule.yml  TrackingModule.yml  VisionPerceptionOnline.yml
src/rostest1/talk/: CMakeLists.txt  package.xml
src/rostest1/talk/src/: talker.cpp
src/socket/: CMakeLists.txt  Server.cpp
src/static_init/: CMakeLists.txt  CameraParamManager.cpp  CameraParamManager.h  IpmTransformatorManager.cpp  IpmTransformatorManager.h  main.cpp
src/test-tkcv/: CMakeLists.txt  batch2  combine_remap.cpp  main.cpp  ttt  ttt.py
src/test_2dimarray/: CMakeLists.txt  main.cpp
src/test_array_stack/: CMakeLists.txt  main.cpp
src/test_bind/: CMakeLists.txt  af.cpp  be.cpp  main.cpp
src/test_condition/: CMakeLists.txt
src/test_configure_cmake/: CMakeLists.txt
src/test_configure_cmake/cmake/: FooConfig.cmake.in  curb_model-config.cmake.in  sdkcondlanenet-config.cmake.in
src/test_egine/: CMakeLists.txt  main.cpp  test_transform.cpp
src/test_enum/: CMakeLists.txt  ErrorCode.h  Log.h  PerceptRecordType.h  PerceptionRecorder.cpp  PerceptionRecorder.h  TimeUtil.h  basic-log.txt  main.cpp
src/test_fix_center/: CMakeLists.txt  fix_angle.cpp  main.cpp
src/test_friend/: CMakeLists.txt  Target.cpp  Target.h  VeloManager.cpp  VeloManager.h  main.cpp
src/test_glog/: CMakeLists.txt  main.cpp  vision_log.h
src/test_glog/glog-0.4.0/lib/: libglog.so.0
src/test_include/: CMakeLists.txt
src/test_include/cmake/: dependency.cmake
src/test_include/include/: foo.h
src/test_include/src/core/: CMakeLists.txt  VisionService.cpp  VisionService.h
src/test_ipm/: CMakeLists.txt  t1.cpp
src/test_omp/: CMakeLists.txt  main.cpp
src/test_opencv/: CMakeLists.txt  DrawUtil.cpp  DrawUtil.h  ImageProce.cpp  object.hpp  test_rot_iou.cpp
src/test_polygon/: CMakeLists.txt  main.cpp
src/test_redef/: CMakeLists.txt  SerialPort_global.h  main.cpp
src/test_redef/213/: CSerialPort.h  Opencv.h
src/test_spd_log/: CMakeLists.txt  SpdLog.cpp  SpdLog.h  basic-log.txt  build_config.h  main.cpp  vision_log.h
src/test_spd_log/logs/: basic-log.txt
src/test_spd_log/spd-1.9.2/include/spdlog/: logger.h  pattern_formatter-inl.h  spdlog-inl.h  spdlog.h
src/test_spd_log/spd-1.9.2/include/spdlog/details/: periodic_worker-inl.h  periodic_worker.h  registry-inl.h  registry.h
src/test_thread/: CMakeLists.txt  main.cpp  main1.cpp
src/test_thread-exit/: CMakeLists.txt  main.cpp
src/test_toml/: CMakeLists.txt  main.cpp
src/test_toml/3rd/: toml11
src/test_toml/config/: VisionPerceptionOnline.toml  configure_front.toml  r120-camera_r3d-20220922.toml  sample.toml
src/test_valgrind/: CMakeLists.txt  main.cpp
src/thread_pool/: CMakeLists.txt  SyncQueue.hpp  ThreadPool.h  main.cpp
src/time_test/: CMakeLists.txt  test_time.cpp
src/visitor/: CMakeLists.txt  main.cpp  visitor.h  visitor.hpp
