<?xml version="1.0"?>
<package format="2">
  <name>vision_perception_front</name>
  <version>0.0.1</version>
  <description>The vision_perception_front package</description>

  <maintainer email="trunk@trunk.tech">chenjiansong</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export>
  </export>
</package>
